Actualizar diseño del componente Skills: ajustar el tamaño de las columnas y agregar una nueva sección para herramientas

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -28,7 +28,7 @@
 
     <div class="row justify-content-center">
         <!-- Frontend Card -->
-        <div class="col-12 col-md-4 mb-4">
+        <div class="col-12 col-md-6 mb-4">
             <div class="card card-with-title shadow-sm">
                 <div class="card-body text-center">
                     <b>Frontend</b>
@@ -46,34 +46,48 @@
         </div>
 
         <!-- Backend Card -->
-        <div class="col-12 col-md-4 mb-4">
+        <div class="col-12 col-md-6 mb-4">
             <div class="card shadow-sm">
                 <div class="card-body text-center">
                     <b>Backend</b>
                     <div class="logos d-flex flex-wrap justify-content-center gap-3 mt-3">
-                    <img src="assets/img/svg/python.svg" alt="Python logo" class="img-fluid logo-icon" />
-                    <img src="assets/img/svg/django.svg" alt="Django logo" class="img-fluid logo-icon" />
-                    <img src="assets/img/svg/java.svg" alt="Java logo" class="img-fluid logo-icon" />
-                    <img src="assets/img/svg/mysql.svg" alt="MySQL logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/svg/python.svg" alt="Python logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/svg/django.svg" alt="Django logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/svg/java.svg" alt="Java logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/svg/mysql.svg" alt="MySQL logo" class="img-fluid logo-icon" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row justify-content-center">
+        <!-- DevOps Card -->
+        <div class="col-12 col-md-6 mb-4">
+            <div class="card shadow-sm">
+                <div class="card-body text-center">
+                    <b>DevOps</b>
+                    <div class="logos d-flex flex-wrap justify-content-center gap-3 mt-3">
+                        <img src="assets/img/svg/aws.svg" alt="AWS logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/svg/github.svg" alt="GitHub logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/png/docker.png" alt="Docker logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/png/git.png" alt="Git logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/png/vercel.png" alt="Vercel logo" class="img-fluid logo-icon" />
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- DevOps & Tools Card -->
-        <div class="col-12 col-md-4 mb-4">
+        <!-- Tools Card -->
+        <div class="col-12 col-md-6 mb-4">
             <div class="card shadow-sm">
                 <div class="card-body text-center">
-                    <b>DevOps & Tools</b>
-                    <div class="logos d-flex flex-wrap justify-content-center gap-3 mt-3">
-                    <img src="assets/img/svg/aws.svg" alt="AWS logo" class="img-fluid logo-icon" />
-                    <img src="assets/img/svg/github.svg" alt="GitHub logo" class="img-fluid logo-icon" />
-                    <img src="assets/img/png/docker.png" alt="Docker logo" class="img-fluid logo-icon" />
-                    <img src="assets/img/png/visualstudiocode.png" alt="Visual Studio Code logo" class="img-fluid logo-icon" />
-                    <img src="assets/img/png/eclipse.png" alt="Eclipse IDE logo" class="img-fluid logo-icon" />
-                    <img src="assets/img/png/git.png" alt="Git logo" class="img-fluid logo-icon" />
-                    <img src="assets/img/png/vercel.png" alt="Vercel logo" class="img-fluid logo-icon" />
-                    </div>
+                    <b>Tools</b>
+                        <div class="logos d-flex flex-wrap justify-content-center gap-3 mt-3">
+                            <img src="assets/img/png/visualstudiocode.png" alt="Visual Studio Code logo" class="img-fluid logo-icon" />
+                            <img src="assets/img/png/eclipse.png" alt="Eclipse IDE logo" class="img-fluid logo-icon" />
+                            <img src="assets/img/png/firebase.png" alt="Firebase logo" class="img-fluid logo-icon" />
+                        </div>
                 </div>
             </div>
         </div>
