--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
     --shadow-color: rgba(0, 0, 0, 0.1); /* Sombra ligera */
     --fondo-navbar: #2D1E17; /* Fondo de la barra de navegación */
     --fondo-body: #EADDD3; /* Fondo del cuerpo */
-    --color-texto: #523F31; /* Color del texto */
+    --color-texto: #9D8A7C; /* Color del texto */
     --color-texto-claro: #E1D4C2; /* Color del texto claro */
     --color-texto-links: #9D8A7C; /* Color del texto de los enlaces */
     --color-texto-links-oscuro: #796254; /* Color del texto de los enlaces */
