Agregar logos de PHP y Symfony al componente Skills

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -55,6 +55,8 @@
                         <img src="assets/img/svg/django.svg" alt="Django logo" class="img-fluid logo-icon" />
                         <img src="assets/img/svg/java.svg" alt="Java logo" class="img-fluid logo-icon" />
                         <img src="assets/img/svg/mysql.svg" alt="MySQL logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/png/php.png" alt="PHP logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/png/Symfony.png" alt="Symfony logo" class="img-fluid logo-icon" />
                     </div>
                 </div>
             </div>
