--- a/src/app/certifications/certifications.component.html
+++ b/src/app/certifications/certifications.component.html
@@ -38,6 +38,12 @@
                     <a *ngIf="certification.link" [href]="certification.link" target="_blank" class="btn btn-filtrado mt-auto">
                         Ver Certificado
                     </a>
+
+                    <!-- Mostrar PDF si está disponible -->
+                    <div *ngIf="certification.pdfUrl" class="mt-3">
+                        <iframe [src]="certification.pdfUrl" width="100%" height="300px"></iframe>
+                        <a [href]="certification.pdfUrl" download class="btn btn-filtrado mt-2">Ver Certificado</a>
+                    </div>
                 </div>
             </div>
         </div>
