Eliminar imágenes PNG obsoletas y actualizar rutas de logos en el componente Skills

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -39,7 +39,7 @@
                         <img src="assets/img/svg/bootstrap.svg" alt="Bootstrap logo" class="img-fluid logo-icon" />
                         <img src="assets/img/svg/react.svg" alt="React logo" class="img-fluid logo-icon" />
                         <img src="assets/img/svg/angular.svg" alt="Angular logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/png/typescript.png" alt="Typescript logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/png/logo/typescript.png" alt="Typescript logo" class="img-fluid logo-icon" />
                     </div>
                 </div>
             </div>
@@ -55,8 +55,8 @@
                         <img src="assets/img/svg/django.svg" alt="Django logo" class="img-fluid logo-icon" />
                         <img src="assets/img/svg/java.svg" alt="Java logo" class="img-fluid logo-icon" />
                         <img src="assets/img/svg/mysql.svg" alt="MySQL logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/png/php.png" alt="PHP logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/png/Symfony.png" alt="Symfony logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/png/logo/php.png" alt="PHP logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/png/logo/Symfony.png" alt="Symfony logo" class="img-fluid logo-icon" />
                     </div>
                 </div>
             </div>
@@ -72,9 +72,9 @@
                     <div class="logos d-flex flex-wrap justify-content-center gap-3 mt-3">
                         <img src="assets/img/svg/aws.svg" alt="AWS logo" class="img-fluid logo-icon" />
                         <img src="assets/img/svg/github.svg" alt="GitHub logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/png/docker.png" alt="Docker logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/png/git.png" alt="Git logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/png/vercel.png" alt="Vercel logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/png/logo/docker.png" alt="Docker logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/png/logo/git.png" alt="Git logo" class="img-fluid logo-icon" />
+                        <img src="assets/img/png/logo/vercel.png" alt="Vercel logo" class="img-fluid logo-icon" />
                     </div>
                 </div>
             </div>
@@ -86,9 +86,9 @@
                 <div class="card-body text-center">
                     <b>Tools</b>
                         <div class="logos d-flex flex-wrap justify-content-center gap-3 mt-3">
-                            <img src="assets/img/png/visualstudiocode.png" alt="Visual Studio Code logo" class="img-fluid logo-icon" />
-                            <img src="assets/img/png/eclipse.png" alt="Eclipse IDE logo" class="img-fluid logo-icon" />
-                            <img src="assets/img/png/firebase.png" alt="Firebase logo" class="img-fluid logo-icon" />
+                            <img src="assets/img/png/logo/visualstudiocode.png" alt="Visual Studio Code logo" class="img-fluid logo-icon" />
+                            <img src="assets/img/png/logo/eclipse.png" alt="Eclipse IDE logo" class="img-fluid logo-icon" />
+                            <img src="assets/img/png/logo/firebase.png" alt="Firebase logo" class="img-fluid logo-icon" />
                         </div>
                 </div>
             </div>
